# copilot-adapter

./: CLAUDE.md  CREDENTIAL_STORAGE_AUDIT.txt  Cargo.toml  DESIGN.md  DYNAMIC-MODELS.design.md  DYNAMIC-MODELS.plan.md  IMAGE-SUPPORT.plan.md  IMPLEMENTATION.plan.md  LICENSE  README.md  REGRESSION-FIX.md  TOOLS-SUPPORT.design.md  TOOLS-SUPPORT.plan.md  debug-responses.bat  debug-responses.sh  logs.txt  test.logs
.claude/: settings.local.json
docs/: USABILITY-IMPROVEMENTS.md  debug-scripts-readme.md  debugging-tool-calls.md  e2e-testing.md  known-issues.md  migration-v2-credentials.md
docs/design/: AUTO-AUTH-AND-ONBOARDING.plan.md  BACKLOG.md  CONSOLIDATED.plan.md  CONTEXT-SIZE-MISMATCH.design.md  CONTEXT-WINDOW-AND-TRUNCATION.design.md  CONTEXT-WINDOW-AND-TRUNCATION.plan.md  COPILOT-1M-MODEL-CONSOLIDATION.design.md  COPILOT-1M-MODEL-CONSOLIDATION.plan.md  DAEMON-AUTH.design.md  DUAL-RESPONSES.plan.md  HOME-DIR-STATUS.design.md  HOME-DIR-TOKEN.design.md  IMAGE-SUPPORT.plan.md  IMPLEMENTATION.plan.md  ISSUE-DUAL-RESPONSES.md  LOG-ANALYSIS-FIXES.plan.md  MISSING-FEATURES.md  MODEL-NORMALIZATION.md  MULTI-INSTANCE-PROFILES.design.md  NATIVE-CREDENTIAL-STORAGE.design.md  NATIVE-CREDENTIAL-STORAGE.plan.md  NATIVE-TOOLS-STREAMING.design.md  NATIVE-TOOLS-STREAMING.plan.md  PRODUCTIZATION.ideas.md  ROOT-AND-COUNT-TOKENS.plan.md  TOOL-CALL-ANALYSIS.md  TOOLS-SUPPORT.design.md  TOOLS-SUPPORT.plan.md  TRACE-LOGGING.md  USAGE-TOKEN-COUNTS.design.md  USAGE-TOKEN-COUNTS.plan.md
docs/development/: debug-scripts-readme.md  debugging-tool-calls.md  e2e-testing.md
examples/: test_persistence.rs
scripts/: debug-responses.sh  test_persistence.sh  verify-native-tools.ps1  verify-native-tools.sh
src/: cli.rs  conversation_log.rs  error.rs  guidance.rs  lib.rs  main.rs  model_mapper.rs  server.rs  token_counter.rs
src/anthropic/: types.rs
src/auth/: browser.rs  device_flow.rs  input.rs  mod.rs  token.rs
src/copilot/: client.rs  mod.rs  models_cache.rs  types.rs
src/daemon/: mod.rs  status.rs  unix.rs  windows.rs
src/handlers/: chat.rs  count_tokens.rs  health.rs  messages.rs  mod.rs  models.rs
src/profile/: migration.rs  mod.rs  types.rs
src/storage/: dpapi.rs  file.rs  keyring.rs  legacy.rs  mod.rs  native.rs  windows_credential.rs
src/streaming/: state.rs
src/tools/: injector.rs  mod.rs  parser.rs  registry.rs  translator.rs  types.rs
tests/: windows_credential_test.rs
tests/common/: mock_copilot.rs  mock_github.rs  mod.rs
tests/integration/: auth_tests.rs  chat_tests.rs  concurrent_tests.rs  count_tokens_tests.rs  daemon_tests.rs  error_tests.rs  messages_multimodal_tests.rs  messages_tests.rs  mod.rs  models_dynamic_tests.rs  models_tests.rs  native_tools_tests.rs  native_tools_verification_tests.rs  profile_tests.rs  server_tests.rs  storage_integration_test.rs  streaming_tests.rs  test_helpers.rs  tools_chat_tests.rs  (+3 more)
(+49 files in other folders)
