[package]
name = "copilot-adapter"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "OpenAI-compatible proxy to GitHub Copilot API for Claude Code"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["tokio"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = "3.6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
async-stream = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
bytes = "1"
regex = "1"
once_cell = "1"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Credentials"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["full", "test-util"] }

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
